added userId to login endpoint added get username endpoint
