# internal/http/models/user.go
@@ -1,0 +1,5 @@
+package models
+
+type UserDetailResponseModel struct {
+	Username string `json:"username" example:"johndoe"`
+}
